--- a/rem/demo/index.html
+++ b/rem/demo/index.html
@@ -11,6 +11,7 @@
     <div id="root">
         scollup-vue
     </div>
+    <link rel="stylesheet" href="../dist/demo.css">
     <script src="../dist/index.js"></script>
 </body>
 
