--- a/rem/demo/index.html
+++ b/rem/demo/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <div id="root">
-        scollup-vue
+        <router-view>
+            scollup-vue
+        </router-view>
     </div>
     <link rel="stylesheet" href="../dist/demo.css">
     <script src="../dist/index.js"></script>
