--- a/rem/demo/index.html
+++ b/rem/demo/index.html
@@ -13,6 +13,7 @@
             scollup-vue
         </router-view>
     </div>
+    <link rel="stylesheet" href="../src/reset.css">
     <link rel="stylesheet" href="../dist/demo.css">
     <script src="../dist/index.js"></script>
 </body>
