--- a/render/demo/index.html
+++ b/render/demo/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div id="root"></div>
+    <script src="./tween@16.3.js"></script>
     <script src="../dist/index.js"></script>
 </body>
 
